--- a/Project.html
+++ b/Project.html
@@ -42,13 +42,13 @@
                     <p id="text2">Innovative designer blending AR with traditional aesthetics. Part digital, part physical, always cutting-edge.</p>
                 </div>
                 <div>
-                   <img id="img2" src="/857be47e96f7c8563080755d45e3404a.png">
+                   <img id="img2" src="857be47e96f7c8563080755d45e3404a.png">
                 </div>
 
             <div class="container4">
-                <div class="row1">
+                <div class="row">
                     <div class="box">
-                        <img src="/6d9829fefb139afd18f91be89ae32650.png" alt="" class="image">
+                        <img src="6d9829fefb139afd18f91be89ae32650.png" alt="" class="image">
                         <div class="imgtext1">
                             <p>Holographic Branding</p>
                         </div>
@@ -57,7 +57,7 @@
                         </div>
                     </div>
                     <div class="box">
-                        <img src="/ad0cc5a71f038cc3237695f9d4382ad2.png" alt="" class="image">
+                        <img src="ad0cc5a71f038cc3237695f9d4382ad2.png" alt="" class="image">
                         <div class="imgtext1">
                             <p>Virtual Reality Spaces</p>
                         </div>
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                     <div class="box">
-                        <img src="/33b8d0615f79174ff130508f44d1de72.png" alt="" class="image">
+                        <img src="33b8d0615f79174ff130508f44d1de72.png" alt="" class="image">
                         <div class="imgtext1">
                             <p>Digital Sculptures</p>
                         </div>
@@ -75,9 +75,9 @@
                         </div>
                     </div>                    
                 </div>
-                <div class="row2"> 
+                <div class="row"> 
                     <div class="box">
-                        <img src="/430f18f331d13706ee140c08268f7eab.png" alt="" class="image">
+                        <img src="430f18f331d13706ee140c08268f7eab.png" alt="" class="image">
                         <div class="imgtext">
                             <div class="imgtext1">
                                 <p>Interactive Installations</p>
@@ -88,7 +88,7 @@
                         </div>
                     </div>
                     <div class="box">
-                        <img src="/de5c42ee005a507e5fd049698eee59bc.png" alt="" class="image">
+                        <img src="de5c42ee005a507e5fd049698eee59bc.png" alt="" class="image">
                         <div class="imgtext">
                             <div class="imgtext1">
                                 <p>Augmented Interiors</p>
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                     <div class="box">
-                        <img src="/51d0c0e29b29d06924bb5c5e3c34f876.png" alt="" class="image">
+                        <img src="51d0c0e29b29d06924bb5c5e3c34f876.png" alt="" class="image">
                         <div class="imgtext">
                             <div class="imgtext1">
                                 <p>Mixed Reality Exhibits</p>
@@ -110,9 +110,9 @@
                         </div>
                     </div>                   
                 </div>
-                <div class="row3">
+                <div class="row">
                     <div class="box">
-                        <img src="/c8cafe9b0342a02074a8275fb72b655c.png" alt="" class="image">
+                        <img src="c8cafe9b0342a02074a8275fb72b655c.png" alt="" class="image">
                         <div class="imgtext">
                             <div class="imgtext1">
                                 <p>Virtual Fashion</p>
@@ -123,7 +123,7 @@
                         </div>
                     </div>
                     <div class="box">
-                        <img src="/2b12b4fd7cc24f242c70396bad35758d.png" alt="" class="image">
+                        <img src="2b12b4fd7cc24f242c70396bad35758d.png" alt="" class="image">
                         <div class="imgtext">
                             <div class="imgtext1">
                                 <p>3D Printed Art</p>
@@ -134,7 +134,7 @@
                         </div>
                     </div>
                     <div class="box">
-                        <img src="/fa69da0bdd47ded91ed4bbb4ad96b41c.png" alt="" class="image">
+                        <img src="fa69da0bdd47ded91ed4bbb4ad96b41c.png" alt="" class="image">
                         <div class="imgtext">
                             <div class="imgtext1">
                                 <p>HoloLens Prototypes</p>
@@ -155,7 +155,7 @@
                     <div id="t">
                         <div id="b1">
                             <div class="profile">
-                                <img src="/5cdf306d9941ec9368f756f75dedf3ea.png" alt="" class="dp">
+                                <img src="5cdf306d9941ec9368f756f75dedf3ea.png" alt="" class="dp">
                             </div>
                             <div id="info1">
                                 <div class="name1"><p class="name">Aurelia F.</p></div>
@@ -169,7 +169,7 @@
                     <div id="t">
                         <div id="b3">
                             <div class="profile">
-                                <img src="/7632810b9f34b0968b66167138f0c782.png" alt="" class="dp">
+                                <img src="7632810b9f34b0968b66167138f0c782.png" alt="" class="dp">
                             </div>
                             <div id="info2">
                                 <div class="name1"><p class="name">Cassian M.</p></div>
@@ -183,7 +183,7 @@
                     <div id="t">
                         <div id="b5">
                             <div class="profile">
-                                <img src="/07884dfc16f027cf0874023a9ef0acc7.png" alt="" class="dp">
+                                <img src="07884dfc16f027cf0874023a9ef0acc7.png" alt="" class="dp">
                             </div>
                             <div id="info1">
                                 <div class="name1"><p class="name">Leona R.</p></div>
@@ -197,7 +197,7 @@
                     <div id="t">
                         <div id="b7">
                             <div class="profile">
-                                <img src="/9423c3651fac87b113d5fa71eb0fa584.png" alt="" class="dp">
+                                <img src="9423c3651fac87b113d5fa71eb0fa584.png" alt="" class="dp">
                             </div>
                             <div id="info1">
                                 <div class="name1"><p class="name">Darius T.</p></div>
